--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/node": "^20.19.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/xlsx": "^0.0.35",
     "@uppy/core": "^4.4.6",
     "@uppy/store-default": "^4.2.0",
     "@uppy/tus": "^4.2.2",
     "@uppy/utils": "^6.1.5",
     "@uppy/xhr-upload": "^4.3.3",
-    "autoprefixer": "10.4.17",
+    "autoprefixer": "^10.4.17",
     "date-fns": "^3.3.1",
     "imagekit": "^6.0.0",
-    "next": "14.1.0",
-    "postcss": "8.4.35",
-    "react": "^18",
+    "next": "^15.4.1",
+    "postcss": "^8.4.35",
+    "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^18",
+    "react-dom": "^19.1.0",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.3",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.41.3",
+    "@netlify/plugin-nextjs": "^5.11.6",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "^15.4.1"
   },
   "engines": {
     "node": ">=18.0.0"
