--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # 🚀 NETLIFY OPTIMIZADO: Comandos de build específicos para Next.js con API routes
-  command = "npm run build"
+  command = "npm install --save-dev @types/react && npm run build"
   publish = ".next" # Usar '.next' para output: 'standalone'
 
 [[plugins]]
@@ -17,11 +17,12 @@
   to = "/.netlify/functions/___netlify-handler"
   status = 200
 
-# 🚀 REDIRECTS ADICIONALES PARA SPA
+# 🚀 REDIRECTS PARA NEXT.JS APP ROUTER
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/___netlify-handler"
   status = 200
+  force = true
 
 # 📦 HEADERS OPTIMIZADOS PARA RENDIMIENTO
 [[headers]]
