--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.0.0",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.3",
     "tailwindcss": "^3.4.1",
