Mejorar página de menús: actualización automática y formato mejorado
- Convertir página de menús a client-side rendering para actualización automática
- Implementar recarga automática al volver de escanear menú
- Eliminar botón de recarga manual y timestamp de actualización
- Mejorar formato de visualización: cada platillo en línea con flecha
- Implementar separación automática de platillos por detección de mayúsculas
- Eliminar duplicación de fecha en tarjetas de menú
- Agregar configuración de VSCode para mejor soporte de Tailwind CSS
- Capitalizar automáticamente cada platillo para mejor presentación

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,24 @@
 {
-    "typescript.autoClosingTags": false
+  "css.validate": false,
+  "tailwindCSS.includeLanguages": {
+    "javascript": "javascript",
+    "typescript": "typescript",
+    "typescriptreact": "typescriptreact",
+    "javascriptreact": "javascriptreact"
+  },
+  "tailwindCSS.experimental.classRegex": [
+    ["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"],
+    ["cn\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+  ],
+  "tailwindCSS.experimental.configFile": "./tailwind.config.js",
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact",
+    "typescript": "typescriptreact"
+  }
 }
