--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "autoprefixer": "^10.4.17",
     "date-fns": "^3.3.1",
     "imagekit": "^6.0.0",
-    "next": "16.0.7",
+    "next": "^16.1.1",
     "postcss": "^8.4.35",
-    "react": "^19.1.0",
+    "react": "^19.2.3",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.0.0",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.3",
